<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="com.example.unforgottablevocabulary.MainActivity"
    android:screenOrientation="portrait">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/delete_hint"
        app:layout_constraintBottom_toTopOf="@+id/my_rounded_sign_in_button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:autofillHints="@string/add_word_hint"
        android:hint="@string/add_word_hint"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/addNewWord"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAppName" />

    <ListView
        android:id="@+id/wordsList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:numColumns="2"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText">

    </ListView>

    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/appNameColor"
        android:textSize="@dimen/app_name_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/my_rounded_sign_in_button2"
        android:layout_width="@dimen/first_page_button_size"
        android:layout_height="@dimen/first_page_button_size"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_rounded"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="onVocabularyTestClicked"
        android:text="@string/quick_review"
        android:textColor="@color/buttonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addNewWord"
        android:layout_width="88dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/btn_rounded"
        android:onClick="addNewWordButtonClick"

        android:text="@string/add_word"
        android:textColor="@color/buttonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAppName" />

</androidx.constraintlayout.widget.ConstraintLayout>