<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.unforgottablevocabulary.FlashCardsActivity">

    <TextView
        android:id="@+id/cdt"
        android:layout_height="30dp"
        android:textSize="@dimen/normal_text_size"
        android:layout_width="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/remaining"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="5dp"
        android:text="@string/remaining"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintEnd_toStartOf="@+id/cdt"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="@dimen/app_name_size"
        android:textAlignment="center"
        android:gravity="top|bottom"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="145dp"
        tools:layout_editor_absoluteX="0dp"
        android:id="@+id/word"/>

    <Button
        android:id="@+id/yes"
        android:layout_width="@dimen/first_page_button_size"
        android:layout_height="@dimen/first_page_button_size"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn_rounded"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="yesButtonClick"
        android:text="@string/yes"
        android:textColor="@color/buttonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/no"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/no"
        android:layout_width="@dimen/first_page_button_size"
        android:layout_height="@dimen/first_page_button_size"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn_rounded"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="noButtonClick"
        android:text="@string/no"
        android:textColor="@color/buttonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>